# bitloops-inference

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/bitloops-inference/: Cargo.toml
crates/bitloops-inference-protocol/: Cargo.toml
crates/bitloops-inference-protocol/src/: lib.rs
crates/bitloops-inference/src/: cli.rs  config.rs  json.rs  lib.rs  main.rs  runtime.rs
crates/bitloops-inference/src/provider/: mod.rs  ollama_chat.rs  openai_chat_completions.rs
crates/bitloops-inference/tests/: cli_commands.rs  protocol_loop.rs
crates/bitloops-inference/tests/common/: mod.rs
crates/bitloops-inference/tests/fixtures/: ollama_success_response.json  openai_http_error.json  openai_malformed_json_response.json  openai_surrounding_prose_response.json
scripts/: release.sh
