[workspace]
members = [
    "crates/bitloops-inference-protocol",
    "crates/bitloops-inference",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
assert_cmd = "2.0.17"
bitloops-inference-protocol = { path = "crates/bitloops-inference-protocol" }
mockito = "1.7.0"
pico-args = "0.5.0"
predicates = "3.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.8.23"
ureq = { version = "2.12.1", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
